# vs-code-conan

./: .gitignore  .nycrc  .prettierignore  .prettierrc.json  .vscodeignore  CHANGELOG.md  Dockerfile  LICENSE  README.adoc  README.md  build.py  createWithDocker.py  package-lock.json  package.json  sonar-project.properties  tsconfig.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml  renovate.json
.github/workflows/: docker.yml  vsce-build-publish.yml
conan_example_project/: .gitignore  CMakeLists.txt  build.py  dmtpDemo.py
conan_example_project/.workspace/: conanws_gcc.yml  ws-layout.ini
conan_example_project/Base/: conanfile.py
conan_example_project/Dmtp/: Dmtp.py  dagTest.py
conan_example_project/a/: CMakeLists.txt  conanfile.py  cpputest.py
conan_example_project/a/test/: CMakeLists.txt  a_test.cpp  cpputest_test.cpp
conan_example_project/b/: CMakeLists.txt  conanfile.py
conan_example_project/c/: CMakeLists.txt  conanfile.py
conan_example_project/c/test/: CMakeLists.txt  c_test.cpp
conan_example_project/d/: CMakeLists.txt  conanfile.py
docs/: configure.adoc  howto.adoc  release-notes.adoc
src/: extension.ts  utility.ts
src/commands/: commands.ts  control.ts  register-commands.ts  view.ts  vscode-control.ts
src/configurator/: argument-parser.ts  configurator.ts  general-settings.ts  generator.ts  profile.ts  settings-parser.ts  workspace.ts
src/executor/: executor.ts
src/system/: executor.ts  interface.ts  node.ts  plugin.ts  system.ts
src/test/: runTest.ts
test/unit/: executor-fake.ts  executor-mock.ts  fixtures.ts  (+3 more)
(+47 files in other folders)
